Fix navbar collapse

--- a/css/accumulo.scss
+++ b/css/accumulo.scss
@@ -222,7 +222,7 @@ a.prop {
     }
     .navbar-nav {
         float: none!important;
-        margin: 7.5px -15px;
+        margin: 7.5px;
     }
     .navbar-nav>li {
         float: none;
@@ -235,7 +235,7 @@ a.prop {
         float: none;
         margin: 15px 0;
     }
-    .navbar-collapse.collapse.in {
+    .navbar-collapse.collapse.show {
         display: block!important;
     }
     .collapsing {
